--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peaky Blinders</title>
+    <link rel="icon" href="media/logo-icon.png" />
     <!-- font Aswome -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- main_css -->
@@ -45,10 +46,7 @@
     </div>
     <div class="Landing" id="home">
       <div class="container">
-        <h1>
-          peaky blinders <br />
-          collection
-        </h1>
+        <h1>peaky blinders collection</h1>
         <p>formal suit</p>
       </div>
     </div>
