--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cart Peaky Blinders</title>
+    <link rel="icon" href="media/logo-icon.png" />
     <!-- font Aswome -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- main_css -->
