--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
       <div class="container">
         <nav>
-          <a href="index.html"><img src="media/logo.png" /></a>
+          <a href="index.html"><img src="media/logo.png" loading="lazy" /></a>
           <i class="fa-solid fa-bars-staggered bars">
             <span></span>
           </i>
@@ -75,7 +75,7 @@
         <div class="box">
           <a class="shp" href="shoping.html"> shop now</a>
           <a href="shoping.html">
-            <img src="media/clothes (1).jpg" />
+            <img src="media/clothes (1).jpg" loading="lazy" />
           </a>
           <p>men's watches</p>
           <ul>
@@ -91,7 +91,7 @@
         <div class="box">
           <a class="shp" href="shoping.html">shop now</a>
           <a href="shoping.html">
-            <img src="media/clothes (2).jpg" />
+            <img src="media/clothes (2).jpg" loading="lazy" />
           </a>
           <p>suits</p>
           <ul>
@@ -107,7 +107,7 @@
         <div class="box">
           <a class="shp" href="shoping.html">shop now</a>
           <a href="shoping.html">
-            <img src="media/clothes (3).jpg" />
+            <img src="media/clothes (3).jpg" loading="lazy" />
           </a>
           <p>footwear collextions</p>
           <ul>
@@ -123,7 +123,7 @@
         <div class="box">
           <a class="shp" href="shoping.html">shop now</a>
           <a href="shoping.html">
-            <img src="media/clothes (4).PNG" />
+            <img src="media/clothes (4).PNG" loading="lazy" />
           </a>
           <p>belt</p>
           <ul>
@@ -144,7 +144,7 @@
       <h2 class="special-heading">offers</h2>
       <div class="container">
         <div class="box">
-          <img src="media/category-menu-1.png" />
+          <img src="media/category-menu-1.png" loading="lazy" />
           <h4>separates</h4>
           <p>
             2 pieces + <br />
@@ -152,7 +152,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="media/category-menu-2.png" />
+          <img src="media/category-menu-2.png" loading="lazy" />
           <h4>leather jackets</h4>
           <p>
             2 pieces + <br />
@@ -206,10 +206,10 @@
         ></a>
       </div>
       <div class="paymnt">
-        <img src="media/pay-pal.png" />
-        <img src="media/master-card.png" />
-        <img src="media/Apple-Pay.png" />
-        <img src="media/Visaa.png" />
+        <img src="media/pay-pal.png" loading="lazy" />
+        <img src="media/master-card.png" loading="lazy" />
+        <img src="media/Apple-Pay.png" loading="lazy" />
+        <img src="media/Visaa.png" loading="lazy" />
       </div>
       <p>2024 Gentleman Clothing itd. All rights reserved</p>
     </footer>
